--- a/Billiards.UI/appsettings.json
+++ b/Billiards.UI/appsettings.json
@@ -1,5 +1,6 @@
 {
   "ConnectionStrings": {
-    "DefaultConnection": "Server=localhost\\SQLEXPRESS02;Database=BilliardsDB;Trusted_Connection=True;TrustServerCertificate=True;"
+    "DefaultConnection": "Server=.;Database=BilliardsDB;User Id=sa;Password=kingqn132;TrustServerCertificate=True;"
   }
 }
+
