--- a/Billiards.UI/appsettings.json
+++ b/Billiards.UI/appsettings.json
@@ -1,6 +1,6 @@
 {
-  "ConnectionStrings": {
-    "DefaultConnection": "Server=.;Database=BilliardsDB;User Id=sa;Password=kingqn132;TrustServerCertificate=True;"
-  }
+    "ConnectionStrings": {
+        "DefaultConnection": "Server=MSI\\SQLEXPRESS;Database=BilliardsDB;User Id=sa;Password=kingqn132;TrustServerCertificate=True;"
+    }
 }
 
