fix lỗi thêm được nhiều hơn sản phẩm có trong trang Order

--- a/Billiards.UI/appsettings.json
+++ b/Billiards.UI/appsettings.json
@@ -1,6 +1,6 @@
 {
     "ConnectionStrings": {
-        "DefaultConnection": "Server=localhost\\SQLEXPRESS02;Database=BilliardsDB;User Id=sa;Password=kingqn132;TrustServerCertificate=True;"
+        "DefaultConnection": "Server=.;Database=BilliardsDB;User Id=sa;Password=kingqn132;TrustServerCertificate=True;"
     }
 }
 
